--- a/settings.json
+++ b/settings.json
@@ -7,19 +7,19 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
+	"ownerNumber": "6285773557984",
+	"ownerNumberr": "6285773557984",
+	"cr": "@Dhani ofc",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
-	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-	"thumb":"IMG_20211001_074948_766-min.jpg",
-	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
+	"ownername": "Dhani ofc",
+	"botname":"Dhani ofc",
+	"img":"http://www.simpleimageresizer.com/_uploads/photos/ee89be18/285302e5fe9e2707a1d4539ff66c41f2.jpg",
+	"thumb":"http://www.simpleimageresizer.com/_uploads/photos/ee89be18/285302e5fe9e2707a1d4539ff66c41f2.jpg",
+	"fakethumb":"http://www.simpleimageresizer.com/_uploads/photos/ee89be18/285302e5fe9e2707a1d4539ff66c41f2.jpg", 
+	"fake": " 「  Dhani ofc  」\nCreated By @Dhani ofc"
 }
